--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="en-GB">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Résumé</title>
-    <link rel="stylesheet" href="/TarasMavrovich-homepage/style.css" />
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     ― Hello World! &#x1F609;
